--- a/epicgame.html
+++ b/epicgame.html
@@ -11,15 +11,16 @@
 <body>
     <nav>
 
-        <div class="nav-l">        
-            <img class="logo__img" fetchpriority="high" height="32" alt="Epic Games shield logo"
-            src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
+        <div class="nav-l">
+            <img class="logoimg" fetchpriority="high" height="32" alt="Epic Games shield logo"
+                src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
             <a href="#">Store</a>
             <a href="#">News</a>
             <a href="#">FAQ</a>
             <a href="#">Help</a>
-            <a href="#">About Epic</a>
+
             <button class="about-m">
+                <a href="#">About Epic</a>
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                         d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
@@ -28,19 +29,68 @@
             </button>
         </div>
         <div class="nav-r">
-            <button class="lang-btn"></button>
+            <button class="lang-btn">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M3.784 11.25H8.01c.065-2.256.423-4.31.985-5.869.166-.457.352-.882.561-1.263a8.26 8.26 0 0 0-5.773 7.132m8.216-9c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25m0 1.5c-.146 0-.383.08-.695.444-.309.362-.62.93-.898 1.697-.494 1.368-.83 3.243-.896 5.359h4.978c-.066-2.116-.402-3.991-.896-5.36-.277-.766-.59-1.334-.898-1.696-.312-.364-.55-.444-.695-.444m3.99 7.5c-.066-2.256-.424-4.31-.986-5.869a9 9 0 0 0-.561-1.263 8.26 8.26 0 0 1 5.773 7.132zm-1.501 1.5H9.51c.065 2.116.402 3.991.896 5.36.277.766.59 1.334.898 1.696.312.364.55.444.695.444.146 0 .383-.08.695-.444.309-.362.62-.93.898-1.697.494-1.368.83-3.243.896-5.359m-.046 7.132a9 9 0 0 0 .56-1.263c.563-1.559.92-3.613.986-5.869h4.227a8.26 8.26 0 0 1-5.773 7.132m-4.886 0a9 9 0 0 1-.56-1.263c-.563-1.559-.92-3.613-.986-5.869H3.784a8.26 8.26 0 0 0 5.773 7.132"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
             <button class="signin-btn">Sign in</button>
             <button class="download-btn">Download</button>
         </div>
     </nav>
+
+    <div class="hero-section">
+        <div class="scroll-content">
+            <div class="homepageepic">
+                <img src="/image/homepageepic.png" alt="Epic Banner" class="hero-image">
+            </div>
+            <div class="fortnite">
+                <img src="/image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
+                <p>FORTNITE</p>
+                <!-- <a href="https://www.epicgames.com/fortnite" class="btn btn-primary btn-lg">Explore</a> -->
+            </div>
+            <img src="/image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
+            <img src="/image/rocket.png" alt="Epic Banner" class="hero-image">
+            <img src="/image/Unrealengine.png" alt="Epic Banner" class="hero-image">
+            <img src="/image/unrealtournament.png" alt="Epic Banner" class="hero-image">
+        
+            <img src="/image/homepageepic.png" alt="Epic Banner" class="hero-image">
+            <img src="/image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
+            <img src="/image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
+            <img src="/image/rocket.png" alt="Epic Banner" class="hero-image">
+            <img src="/image/Unrealengine.png" alt="Epic Banner" class="hero-image">
+            <img src="/image/unrealtournament.png" alt="Epic Banner" class="hero-image">
+        
+        </div>
+    </div>
+
 
 
 
 
 
     <footer class="footer">
-        <img class="logo__img" fetchpriority="high" height="32" alt="Epic Games shield logo"
-            src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
+        <div class="social">
+            <img class="logo__img" fetchpriority="high" height="32" alt="Epic Games shield logo"
+                src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="m17.01 12.25.555-3.62h-3.473V6.282c0-.99.485-1.956 2.04-1.956h1.58V1.245S16.279 1 14.909 1c-2.86 0-4.73 1.734-4.73 4.872V8.63H7v3.62h3.18V21h3.912v-8.75z">
+                </path>
+            </svg>
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M13.712 10.622 20.413 3h-1.588l-5.818 6.618L8.36 3H3l7.027 10.007L3 21h1.588l6.144-6.989L15.64 21H21zm-2.174 2.474-.713-.997L5.16 4.17H7.6l4.571 6.4.712.996 5.943 8.319h-2.439z">
+                </path>
+            </svg>
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M21.8 8.035s-.195-1.379-.796-1.984c-.762-.797-1.613-.801-2.004-.848C16.203 5 12.004 5 12.004 5h-.008S7.796 5 5 5.203c-.39.047-1.242.05-2.004.848-.601.605-.793 1.984-.793 1.984S2 9.656 2 11.273v1.516c0 1.617.2 3.238.2 3.238s.195 1.38.792 1.985c.762.797 1.762.77 2.207.855 1.602.152 6.801.2 6.801.2s4.203-.008 7-.208c.39-.047 1.242-.05 2.004-.847.601-.606.797-1.985.797-1.985S22 14.41 22 12.79v-1.516c0-1.617-.2-3.238-.2-3.238M9.935 14.63V9.008l5.402 2.82z">
+                </path>
+            </svg>
+        </div>
         <hr>
         <div class="footer-content">
             <div class="column">
