update html css

--- a/epicgame.html
+++ b/epicgame.html
@@ -5,15 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Epic Game</title>
-    <link rel="stylesheet" href="/colorepic.css">
+    <link rel="stylesheet" href="./colorepic.css">
 </head>
 
 <body>
     <nav>
 
         <div class="nav-l">
-            <img class="logoimg" fetchpriority="high" height="32" alt="Epic Games shield logo"
-                src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
+            <button class="nav-logo">
+            <img  fetchpriority="high" height="24" alt="Epic Games shield logo"
+                src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="24">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
             <a href="#">Store</a>
             <a href="#">News</a>
             <a href="#">FAQ</a>
@@ -42,27 +49,71 @@
     </nav>
 
     <div class="hero-section">
-        <div class="scroll-content">
+        <div class="scroll-c">
             <div class="homepageepic">
-                <img src="/image/homepageepic.png" alt="Epic Banner" class="hero-image">
+                <img src="./image/homepageepic.png" alt="Epic Banner" class="hero-image">
+                <p>
+                    <span>STORE</span>
+                </p>
             </div>
             <div class="fortnite">
-                <img src="/image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
+                <img src="./image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
                 <p>FORTNITE</p>
                 <!-- <a href="https://www.epicgames.com/fortnite" class="btn btn-primary btn-lg">Explore</a> -->
             </div>
-            <img src="/image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
-            <img src="/image/rocket.png" alt="Epic Banner" class="hero-image">
-            <img src="/image/Unrealengine.png" alt="Epic Banner" class="hero-image">
-            <img src="/image/unrealtournament.png" alt="Epic Banner" class="hero-image">
-        
-            <img src="/image/homepageepic.png" alt="Epic Banner" class="hero-image">
-            <img src="/image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
-            <img src="/image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
-            <img src="/image/rocket.png" alt="Epic Banner" class="hero-image">
-            <img src="/image/Unrealengine.png" alt="Epic Banner" class="hero-image">
-            <img src="/image/unrealtournament.png" alt="Epic Banner" class="hero-image">
-        
+            <div class="roborecall">
+                <img src="./image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
+                <p>robo</p>
+                <p>recall</p>
+            </div>
+            <div class="rocket">
+                <img src="./image/rocket.png" alt="Epic Banner" class="hero-image">
+                <p>rocket</p>
+            </div>
+            <div class="unrealengine">
+                <img src="./image/Unrealengine.png" alt="Epic Banner" class="hero-image">
+                <p>Unreal</p>
+                <p>engine</p>
+            </div>
+            <div class="unrealtournament">
+                <img src="./image/unrealtournament.png" alt="Epic Banner" class="hero-image">
+                <p>unreal</p>
+                <p>tournament</p>
+            </div>
+
+
+            <div class="homepageepic">
+                <img src="./image/homepageepic.png" alt="Epic Banner" class="hero-image">
+                <p>
+                    <span>STORE</span>
+                </p>
+            </div>
+            <div class="fortnite">
+                <img src="./image/Fortnite.jpg" alt="Epic Banner" class="hero-image">
+                <p>FORTNITE</p>
+                <!-- <a href="https://www.epicgames.com/fortnite" class="btn btn-primary btn-lg">Explore</a> -->
+            </div>
+            <div class="roborecall">
+                <img src="./image/Roborecall.jpg" alt="Epic Banner" class="hero-image">
+                <p>robo</p>
+                <p>recall</p>
+            </div>
+            <div class="rocket">
+                <img src="./image/rocket.png" alt="Epic Banner" class="hero-image">
+                <p>rocket</p>
+            </div>
+            <div class="unrealengine">
+                <img src="./image/Unrealengine.png" alt="Epic Banner" class="hero-image">
+                <p>Unreal</p>
+                <p>engine</p>
+            </div>
+            <div class="unrealtournament">
+                <img src="./image/unrealtournament.png" alt="Epic Banner" class="hero-image">
+                <p>unreal</p>
+                <p>tournament</p>
+            </div>
+
+
         </div>
     </div>
 
@@ -72,24 +123,28 @@
 
 
     <footer class="footer">
-        <div class="social">
-            <img class="logo__img" fetchpriority="high" height="32" alt="Epic Games shield logo"
-                src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="m17.01 12.25.555-3.62h-3.473V6.282c0-.99.485-1.956 2.04-1.956h1.58V1.245S16.279 1 14.909 1c-2.86 0-4.73 1.734-4.73 4.872V8.63H7v3.62h3.18V21h3.912v-8.75z">
-                </path>
-            </svg>
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M13.712 10.622 20.413 3h-1.588l-5.818 6.618L8.36 3H3l7.027 10.007L3 21h1.588l6.144-6.989L15.64 21H21zm-2.174 2.474-.713-.997L5.16 4.17H7.6l4.571 6.4.712.996 5.943 8.319h-2.439z">
-                </path>
-            </svg>
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M21.8 8.035s-.195-1.379-.796-1.984c-.762-.797-1.613-.801-2.004-.848C16.203 5 12.004 5 12.004 5h-.008S7.796 5 5 5.203c-.39.047-1.242.05-2.004.848-.601.605-.793 1.984-.793 1.984S2 9.656 2 11.273v1.516c0 1.617.2 3.238.2 3.238s.195 1.38.792 1.985c.762.797 1.762.77 2.207.855 1.602.152 6.801.2 6.801.2s4.203-.008 7-.208c.39-.047 1.242-.05 2.004-.847.601-.606.797-1.985.797-1.985S22 14.41 22 12.79v-1.516c0-1.617-.2-3.238-.2-3.238M9.935 14.63V9.008l5.402 2.82z">
-                </path>
-            </svg>
+        <div class="footer-top">
+            <div class="logo-footer">
+                <img fetchpriority="high" height="32" alt="Epic Games shield logo"
+                    src="https://cms-assets.unrealengine.com/AVzjeqAbLRKi3W5jq0CAvz/aChpm2RFQ3k8uQWWVwgM" width="32">
+            </div>
+            <div class="logo-social">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="m17.01 12.25.555-3.62h-3.473V6.282c0-.99.485-1.956 2.04-1.956h1.58V1.245S16.279 1 14.909 1c-2.86 0-4.73 1.734-4.73 4.872V8.63H7v3.62h3.18V21h3.912v-8.75z">
+                    </path>
+                </svg>
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M13.712 10.622 20.413 3h-1.588l-5.818 6.618L8.36 3H3l7.027 10.007L3 21h1.588l6.144-6.989L15.64 21H21zm-2.174 2.474-.713-.997L5.16 4.17H7.6l4.571 6.4.712.996 5.943 8.319h-2.439z">
+                    </path>
+                </svg>
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M21.8 8.035s-.195-1.379-.796-1.984c-.762-.797-1.613-.801-2.004-.848C16.203 5 12.004 5 12.004 5h-.008S7.796 5 5 5.203c-.39.047-1.242.05-2.004.848-.601.605-.793 1.984-.793 1.984S2 9.656 2 11.273v1.516c0 1.617.2 3.238.2 3.238s.195 1.38.792 1.985c.762.797 1.762.77 2.207.855 1.602.152 6.801.2 6.801.2s4.203-.008 7-.208c.39-.047 1.242-.05 2.004-.847.601-.606.797-1.985.797-1.985S22 14.41 22 12.79v-1.516c0-1.617-.2-3.238-.2-3.238M9.935 14.63V9.008l5.402 2.82z">
+                    </path>
+                </svg>
+            </div>
         </div>
         <hr>
         <div class="footer-content">
@@ -167,10 +222,12 @@
         </div>
         <hr>
         <div class="footer-bottom">
-            <p>© 2025, Epic Games, Inc. All rights reserved. Epic, Epic Games, the Epic Games logo, Fortnite, the
+            <p>
+                © 2025, Epic Games, Inc. All rights reserved. Epic, Epic Games, the Epic Games logo, Fortnite, the
                 Fortnite logo, Unreal, Unreal Engine, the Unreal Engine logo, Unreal Tournament, and the Unreal
                 Tournament logo are trademarks or registered trademarks of Epic Games, Inc. in the United States of
-                America and elsewhere. Other brands or product names are the trademarks of their respective owners.</p>
+                America and elsewhere. Other brands or product names are the trademarks of their respective owners.
+            </p>
             <div class="footer-links">
                 <a href="#">Terms of service</a>
                 <a href="#">Privacy policy</a>
