--- a/epicgame.html
+++ b/epicgame.html
@@ -21,6 +21,7 @@
                         clip-rule="evenodd"></path>
                 </svg>
             </button>
+            <p>add</p>
             <a href="#">Store</a>
             <a href="#">News</a>
             <a href="#">FAQ</a>
