--- a/epicgame.html
+++ b/epicgame.html
@@ -64,13 +64,17 @@
   </div>
 
   <div class="hero-section">
+    <div role="presentation" class="nextArrow">
+      <i role="presentation" class="icon-arrow-right"></i>
+    </div>
     <div class="scroll-c">
       <div class="homepageepic">
         <p>STORE</p>
+        <a href="https://www.epicgames.com/fortnite">Explore</a>
+
       </div>
       <div class="fortnite">
         <p>FORTNITE</p>
-        <!-- <a href="https://www.epicgames.com/fortnite" class="btn btn-primary btn-lg">Explore</a> -->
       </div>
       <div class="roborecall">
         <p>robo<br />recall</p>
@@ -93,10 +97,11 @@
 
       <div class="homepageepic">
         <p>STORE</p>
+        <a href="https://www.epicgames.com/fortnite">Explore</a>
+
       </div>
       <div class="fortnite">
         <p>FORTNITE</p>
-        <!-- <a href="https://www.epicgames.com/fortnite" class="btn btn-primary btn-lg">Explore</a> -->
       </div>
       <div class="roborecall">
         <p>robo<br />recall</p>
@@ -144,9 +149,19 @@
       </div>
     </div>
     <hr />
+    <hr class="phone-hr">
+
     <div class="footer-content">
       <div class="column">
-        <h2>Games</h2>
+        <div class="column-header">
+    <h2>Games</h2>
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg>
+  </div>
+        <hr class="phone-hr">
         <ul>
           <li>Fortnite</li>
           <li>Fall Guys</li>
@@ -158,7 +173,14 @@
         </ul>
       </div>
       <div class="column">
+        <div class="column-header">
         <h2>Marketplaces</h2>
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg></div>
+        <hr class="phone-hr">
         <ul>
           <li>Epic Games Store</li>
           <li>Fab</li>
@@ -169,7 +191,14 @@
         </ul>
       </div>
       <div class="column">
+        <div class="column-header">
         <h2>Tools</h2>
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg></div>
+        <hr class="phone-hr">
         <ul>
           <li>Unreal Engine</li>
           <li>UEFN</li>
@@ -181,7 +210,14 @@
         </ul>
       </div>
       <div class="column">
+        <div class="column-header">
         <h2>Online Services</h2>
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg></div>
+        <hr class="phone-hr">
         <ul>
           <li>Epic Online Services</li>
           <li>Kids Web Services</li>
@@ -192,7 +228,14 @@
         </ul>
       </div>
       <div class="column">
+        <div class="column-header">
         <h2>Company</h2>
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg></div>
+        <hr class="phone-hr">
         <ul>
           <li>About</li>
           <li>Newsroom</li>
@@ -202,7 +245,13 @@
         </ul>
       </div>
       <div class="column">
+        <div class="column-header">
         <h2>Resources</h2>
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
+        clip-rule="evenodd"></path>
+    </svg></div>
         <ul>
           <li>Dev Community</li>
           <li>MegaGrants</li>
@@ -217,6 +266,7 @@
         </ul>
       </div>
     </div>
+    <hr class="phone-hr">
 
     <hr />
 
