--- a/epicgame.html
+++ b/epicgame.html
@@ -20,14 +20,7 @@
             clip-rule="evenodd"></path>
         </svg>
       </button>
-      <button class="menu-phone onclick=" toggleMobileMenu()">
-        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M2.25 5A.75.75 0 0 1 3 4.25h18a.75.75 0 0 1 0 1.5H3A.75.75 0 0 1 2.25 5m0 7a.75.75 0 0 1 .75-.75h18a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75m0 7a.75.75 0 0 1 .75-.75h18a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75"
-            clip-rule="evenodd"></path>
-        </svg>
-
-      </button>
+     
       <a href="#">Store</a>
       <a href="#">News</a>
       <a href="#">FAQ</a>
@@ -49,7 +42,15 @@
           <a href="#">Students</a>
         </div>
       </div>
-    </div>
+    </div> 
+    <button class="menu-phone">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M2.25 5A.75.75 0 0 1 3 4.25h18a.75.75 0 0 1 0 1.5H3A.75.75 0 0 1 2.25 5m0 7a.75.75 0 0 1 .75-.75h18a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75m0 7a.75.75 0 0 1 .75-.75h18a.75.75 0 0 1 0 1.5H3a.75.75 0 0 1-.75-.75"
+            clip-rule="evenodd"></path>
+        </svg>
+
+      </button>
     <div class="nav-r">
       <button class="lang-btn">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -64,14 +65,10 @@
   </div>
 
   <div class="hero-section">
-    <div role="presentation" class="nextArrow">
-      <i role="presentation" class="icon-arrow-right"></i>
-    </div>
+
     <div class="scroll-c">
       <div class="homepageepic">
         <p>STORE</p>
-        <a href="https://www.epicgames.com/fortnite">Explore</a>
-
       </div>
       <div class="fortnite">
         <p>FORTNITE</p>
@@ -97,8 +94,6 @@
 
       <div class="homepageepic">
         <p>STORE</p>
-        <a href="https://www.epicgames.com/fortnite">Explore</a>
-
       </div>
       <div class="fortnite">
         <p>FORTNITE</p>
@@ -235,6 +230,7 @@
         d="M19.53 8.97a.75.75 0 0 1 0 1.06L12 17.56l-7.53-7.53a.75.75 0 1 1 1.06-1.06L12 15.44l6.47-6.47a.75.75 0 0 1 1.06 0"
         clip-rule="evenodd"></path>
     </svg></div>
+    
         <hr class="phone-hr">
         <ul>
           <li>About</li>
